* Remove duplicated meta tags * correct default contrast color for --mdc-theme-error (use https://app.contrast-finder.org ) * Add current specified locale in html lang attribute * Increase notification font size (no font can be below 10px)

--- a/support/cas-server-support-thymeleaf/src/main/resources/static/css/cas.css
+++ b/support/cas-server-support-thymeleaf/src/main/resources/static/css/cas.css
@@ -3,7 +3,7 @@
 
 :root {
     --mdc-text-button-label-text-color: #f7f7f7;
-    --mdc-theme-error: #d9534f;
+    --mdc-theme-error: #d93d33;
     --cas-theme-primary: #044561;
     --cas-theme-primary-bg: rgba(21, 62, 80, 0.2);
     --cas-theme-button-bg: #26418f;
@@ -73,13 +73,13 @@ div#content {
 .notifications-count {
     position: absolute;
     top: 10px;
-    right: 12px;
+    right: 6px;
     background-color: #b00020;
     background-color: var(--cas-theme-danger);
     color: #fff;
     border-radius: 50%;
     padding: 1px 3px;
-    font: 8px Verdana;
+    font: 10px Verdana;
 }
 
 .cas-brand {
